--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "karma-phantomjs-launcher": "0.1.4",
         "karma-requirejs": "0.2.2",
         "karma-sinon": "1.0.3",
-        "requirejs": "2.1.14"
+        "requirejs": "2.1.14",
+        "docker": "0.2.14",
+        "grunt-shell-spawn": "0.3.1"
     }
 }
