--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "grunt-cli": "0.1.13",
         "grunt-contrib-connect": "0.8.0",
         "grunt-contrib-requirejs": "0.4.4",
+        "grunt-contrib-clean": "0.6.0",
         "grunt-karma": "0.8.3",
         "grunt-open": "0.2.3",
         "karma": "0.12.19",
