--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "grunt-contrib-connect": "0.8.0",
         "grunt-contrib-requirejs": "0.4.4",
         "grunt-contrib-clean": "0.6.0",
+        "grunt-docker": "0.0.9",
         "grunt-karma": "0.8.3",
         "grunt-open": "0.2.3",
         "karma": "0.12.19",
