--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "grunt-contrib-connect": "0.8.0",
         "grunt-contrib-requirejs": "0.4.4",
         "grunt-contrib-clean": "0.6.0",
-        "grunt-docker": "0.0.9",
+        "grunt-docco3": "0.2.2",
         "grunt-karma": "0.8.3",
         "grunt-open": "0.2.3",
         "karma": "0.12.19",
@@ -43,7 +43,6 @@
         "karma-requirejs": "0.2.2",
         "karma-sinon": "1.0.3",
         "requirejs": "2.1.14",
-        "docker": "0.2.14",
         "grunt-shell-spawn": "0.3.1"
     }
 }
