--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-    "name": "advice",
-    "version": "1.0.0",
-    "description": "Based on the Advice functional mixin library by Angus Croll. Adds functional mixins to an object. Advice offers a number of ways to modify methods and properties on an object.  It makes it possible to reuse code and compose together functionality to create an object behavior.",
-    "main": "advice.js",
-    "directories": {
+  "name": "advice",
+  "version": "1.0.0",
+  "description": "Based on the Advice functional mixin library by Angus Croll. Adds functional mixins to an object. Advice offers a number of ways to modify methods and properties on an object.  It makes it possible to reuse code and compose together functionality to create an object behavior.",
+  "main": "advice.js",
+  "directories": {
     "doc": "doc",
     "test": "test"
-    },
-    "scripts": {
+  },
+  "scripts": {
     "test": "grunt test"
-    },
-    "repository": {
+  },
+  "repository": {
     "type": "git",
     "url": "git@git.dataminr.com:frontend-team/advice.git"
-    },
-    "keywords": [
-      "advice",
-      "mixins",
-      "javascript",
-      "mixin",
-      "aspect",
-      "reuse",
-      "composable"
-    ],
-    "license": "MIT",
-    "devDependencies": {
-        "bower": "1.3.8",
-        "grunt": "0.4.5",
-        "grunt-cli": "0.1.13",
-        "grunt-contrib-connect": "0.8.0",
-        "grunt-contrib-requirejs": "0.4.4",
-        "grunt-contrib-clean": "0.6.0",
-        "grunt-docker": "0.0.9",
-        "grunt-karma": "0.8.3",
-        "grunt-open": "0.2.3",
-        "karma": "0.12.19",
-        "karma-chai": "0.1.0",
-        "karma-chrome-launcher": "0.1.4",
-        "karma-coverage": "0.2.5",
-        "karma-mocha": "0.1.6",
-        "karma-phantomjs-launcher": "0.1.4",
-        "karma-requirejs": "0.2.2",
-        "karma-sinon": "1.0.3",
-        "requirejs": "2.1.14",
-        "grunt-shell-spawn": "0.3.1"
-    }
+  },
+  "keywords": [
+    "advice",
+    "mixins",
+    "javascript",
+    "mixin",
+    "aspect",
+    "reuse",
+    "composable"
+  ],
+  "license": "MIT",
+  "devDependencies": {
+    "bower": "1.3.8",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-connect": "0.8.0",
+    "grunt-contrib-requirejs": "0.4.4",
+    "grunt-docker": "0.0.9",
+    "grunt-karma": "0.8.3",
+    "grunt-open": "0.2.3",
+    "grunt-shell-spawn": "0.3.1",
+    "karma": "0.12.19",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "0.1.4",
+    "karma-coverage": "0.2.5",
+    "karma-mocha": "0.1.6",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-requirejs": "0.2.2",
+    "karma-sinon": "1.0.3",
+    "requirejs": "2.1.14"
+  }
 }
