Updated demos, docs tests and deps

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 .true
 .jshintrc
 .grunt/
-**/bower_components
-**/node_modules
-**/coverage
+bower_components
+/node_modules
+bin/
 **/compiled
 **/dist
 _SpecRunner.html
+npm-debug.log
