--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "author": "Dataminr, Inc",
   "name": "advice",
   "version": "1.0.0",
   "description": "Based on the Advice functional mixin library by Angus Croll. Adds functional mixins to an object. Advice offers a number of ways to modify methods and properties on an object.  It makes it possible to reuse code and compose together functionality to create an object behavior.",
@@ -12,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.dataminr.com:frontend-team/advice.git"
+    "url": "git@github.com:dataminr/advice.git"
   },
   "keywords": [
     "advice",
@@ -24,25 +25,22 @@
     "composable"
   ],
   "license": "MIT",
+  "dependencies": {
+    "lodash": "2.4.1"
+  },
   "devDependencies": {
-    "bower": "1.3.8",
+    "blanket": "~1.1.6",
+    "chai": "1.10.0",
+    "docker": "git://github.com/armaanahluwalia/docker.git",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-connect": "0.8.0",
     "grunt-contrib-requirejs": "0.4.4",
-    "grunt-docker": "0.0.9",
-    "grunt-karma": "0.8.3",
     "grunt-open": "0.2.3",
-    "grunt-shell-spawn": "0.3.1",
-    "karma": "0.12.19",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "0.1.4",
-    "karma-coverage": "0.2.5",
-    "karma-mocha": "0.1.6",
-    "karma-phantomjs-launcher": "0.1.4",
-    "karma-requirejs": "0.2.2",
-    "karma-sinon": "1.0.3",
+    "grunt-mocha-test": "0.12.7",
+    "grunt-shell": "1.1.2",
+    "mocha": "2.1.0",
     "requirejs": "2.1.14"
   }
 }
