changed namespace on npm package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Dataminr, Inc",
-  "name": "advice",
+  "name": "functional-advice",
   "version": "1.0.0",
   "description": "Based on the Advice functional mixin library by Angus Croll. Adds functional mixins to an object. Advice offers a number of ways to modify methods and properties on an object.  It makes it possible to reuse code and compose together functionality to create an object behavior.",
   "main": "advice.js",
